--- a/code-resolver-joern-server/src/main/resources/application.yml
+++ b/code-resolver-joern-server/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
   neo4j:
     authentication:
       username: neo4j
-      password: chenqiujian123
+      password: 12345678
     uri: bolt://127.0.0.1:7687
 #开启包扫描，可替代 @EnableDubbo 注解
 ##dubbo.scan.base-packages=com.zang.gmall
