--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,22 @@
                 <version>${dubbo.version}</version>
                 <type>pom</type>
             </dependency>
-
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>2.2.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+                <version>4.4.0</version>
+            </dependency>
+            <!--  搭配校验使用，使用与SpringBoot相同的版本号  -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>3.2.7</version>
+            </dependency>
 
         </dependencies>
 
