--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,12 @@
     <artifactId>code-reslover</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
+
+
     <modules>
-        <module>code-resolver-client</module>
         <module>code-resolver-interface</module>
         <module>code-resolver-joern-server</module>
-        <module>code-resolver-tabby-server</module>
+        <module>code-resolver-upload</module>
     </modules>
 
     <properties>
