--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <modules>
         <module>code-resolver-interface</module>
         <module>code-resolver-joern-server</module>
+        <module>code-resolver-upload-server</module>
     </modules>
 
     <properties>
@@ -65,8 +66,6 @@
             </dependency>
 
         </dependencies>
-
-
     </dependencyManagement>
 
     <build>
