--- a/code-resolver-upload-server/pom.xml
+++ b/code-resolver-upload-server/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.icbc</groupId>
-        <artifactId>code-reslover</artifactId>
+        <artifactId>code-resolver</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>code-resolver-upload-server</artifactId>
