--- a/code-resolver-joern-server/src/main/resources/application.yml
+++ b/code-resolver-joern-server/src/main/resources/application.yml
@@ -25,11 +25,11 @@ spring:
       matching-strategy: ant_path_matcher
   data:
     neo4j:
-      database: mvc
+      database: javacode
   neo4j:
     authentication:
       username: neo4j
-      password: 12345678
+      password: chenqiujian123
     uri: bolt://127.0.0.1:7687
 springdoc:
   swagger-ui:
