--- a/code-resolver-joern-server/src/main/resources/application.yml
+++ b/code-resolver-joern-server/src/main/resources/application.yml
@@ -26,17 +26,16 @@ spring:
   data:
     neo4j:
       database: mvc
-#    redis:
-#      database:
-#      host: localhost
-#      port: 6379
-#      password: 123456
-#      lettuce:
-#        pool:
-#          max-active: 10
-#          max-idle: 10
-#          min-idle: 1
-#          time-between-eviction-runs: 10s
+    redis:
+      host: localhost
+      port: 6379
+      password: 123456
+      lettuce:
+        pool:
+          max-active: 10
+          max-idle: 10
+          min-idle: 1
+          time-between-eviction-runs: 10s
   neo4j:
     authentication:
       username: neo4j
