--- a/code-resolver-joern-server/src/main/resources/application.yml
+++ b/code-resolver-joern-server/src/main/resources/application.yml
@@ -25,10 +25,11 @@ spring:
       matching-strategy: ant_path_matcher
   data:
     neo4j:
-      database: mybatis
+      database: mvc
     redis:
       host: localhost
       port: 6379
+      database: 1
       password: 123456
       lettuce:
         pool:
@@ -39,7 +40,7 @@ spring:
   neo4j:
     authentication:
       username: neo4j
-      password: neo4j123
+      password: 12345678
     uri: bolt://127.0.0.1:7687
 springdoc:
   swagger-ui:
