--- a/code-resolver-joern-server/src/main/resources/application.yml
+++ b/code-resolver-joern-server/src/main/resources/application.yml
@@ -25,21 +25,21 @@ spring:
       matching-strategy: ant_path_matcher
   data:
     neo4j:
-      database: mybatis
-    redis:
-      host: localhost
-      port: 6379
-      password: 123456
-      lettuce:
-        pool:
-          max-active: 10
-          max-idle: 10
-          min-idle: 1
-          time-between-eviction-runs: 10s
+      database: resolvertest
+#    redis:
+#      host: localhost
+#      port: 6379
+#      password: 123456
+#      lettuce:
+#        pool:
+#          max-active: 10
+#          max-idle: 10
+#          min-idle: 1
+#          time-between-eviction-runs: 10s
   neo4j:
     authentication:
       username: neo4j
-      password: neo4j123
+      password: chenqiujian123
     uri: bolt://127.0.0.1:7687
 springdoc:
   swagger-ui:
