--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>code-resolver-interface</module>
         <module>code-resolver-joern-server</module>
         <module>code-resolver-netty</module>
+        <module>code-resolver-parse-server</module>
     </modules>
 
     <properties>
