--- a/code-resolver-parse-server/src/main/resources/application.properties
+++ b/code-resolver-parse-server/src/main/resources/application.properties
@@ -1,19 +1,19 @@
 server.port=9997
 dubbo.application.name=joernParse
 dubbo.registry.protocol=zookeeper
-dubbo.registry.address=192.168.85.130:2181
+dubbo.registry.address=localhost:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20888
 dubbo.monitor.protocol=registry
 #joern安装路径
 joern.dir=D:/joern/joern
 #neo4j数据库import所在路径
-import.dir=D:/shixi/relate-data/dbmss/dbms-3cdfff23-0d74-42a4-8f6b-f320ccdaff31/import
+import.dir=D:/neo4jdesktopapp/relate-data/dbmss/dbms-f8e55259-b825-4bcf-98a1-2b6c330c480a/import
 #joern生成的csv文件所在目录
 source.dir=D:/joern/joern/out\\*
 #将csv文件导入到数据库中的所需路径
 import_to_db.dir=D:/shixi/relate-data/dbmss/dbms-3cdfff23-0d74-42a4-8f6b-f320ccdaff31
-node_csv=D:\\shixi\\relate-data\\dbmss\\dbms-3cdfff23-0d74-42a4-8f6b-f320ccdaff31\\import\\nodes_*_cypher.csv
-edge_csv=D:\\shixi\\relate-data\\dbmss\\dbms-3cdfff23-0d74-42a4-8f6b-f320ccdaff31\\import\\edges_*_cypher.csv
+node_csv=D:/shixi/relate-data/dbmss/dbms-3cdfff23-0d74-42a4-8f6b-f320ccdaff31/import/nodes_*_cypher.csv
+edge_csv=D:/shixi/relate-data/dbmss/dbms-3cdfff23-0d74-42a4-8f6b-f320ccdaff31/import/edges_*_cypher.csv
 #存放cpg.bin的路径
 cpg.dir=D:/test/cpg.bin
