record 7/22 9:56         修改了路径导致的bug，并对out加了删除命令，i++的判断条件设置为4

--- a/code-resolver-upload-server/src/main/resources/application.properties
+++ b/code-resolver-upload-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9998
 dubbo.application.name=upload
 dubbo.registry.protocol=zookeeper
-dubbo.registry.address=192.168.85.130:2181
+dubbo.registry.address=localhost:2181
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=20882
 dubbo.monitor.protocol=registry
