1.每个子模块整合为微服务完成 2.增加消费者模块对其他服务进行微服务调用

--- a/code-resolver-joern-server/src/main/resources/application.yml
+++ b/code-resolver-joern-server/src/main/resources/application.yml
@@ -36,6 +36,7 @@ spring:
           max-idle: 10
           min-idle: 1
           time-between-eviction-runs: 10s
+      password: 123456
   neo4j:
     authentication:
       username: neo4j
