--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
                 <artifactId>spring-boot-starter-data-redis</artifactId>
                 <version>2.7.2</version>
             </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>1.2.8</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
