实现远程配置

--- a/code-resolver-file-server/pom.xml
+++ b/code-resolver-file-server/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>code-resolver</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>code-resolver-upload-server</artifactId>
+    <artifactId>code-resolver-file-server</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -17,8 +17,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+<!--        &lt;!&ndash; Nacos Config & Discovery Starter &ndash;&gt;-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
         <dependency>
             <groupId>com.icbc</groupId>
@@ -72,18 +81,7 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.apache.dubbo</groupId>
-            <artifactId>dubbo-dependencies-zookeeper-curator5</artifactId>
-            <type>pom</type>
-            <exclusions>
-                <exclusion>
-                    <artifactId>slf4j-reload4j</artifactId>
-                    <groupId>org.slf4j</groupId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-
+        <!-- Dubbo Nacos registry dependency -->
         <!-- spring boot starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
