--- a/code-resolver-upload-server/src/main/resources/application.properties
+++ b/code-resolver-upload-server/src/main/resources/application.properties
@@ -3,18 +3,19 @@ dubbo.application.name=upload
 dubbo.registry.protocol=zookeeper
 dubbo.registry.address=127.0.0.1:2181
 dubbo.protocol.name=dubbo
+dubbo.provider.prefer-serialization=fastjson2,hessian2
 dubbo.protocol.port=-1
 dubbo.application.qos-accept-foreign-ip=true
 dubbo.application.qos-port=22224
-
+dubbo.consumer.timeout=60000
 spring.thymeleaf.cache=false
-
+dubbo.protocol.payload=2010241024
 # \u5F00\u542F\u4E0A\u4F20\u548C\u4E0B\u8F7D
 spring.servlet.multipart.enabled=true
 # \u6700\u5927\u7684\u6587\u4EF6\u5927\u5C0F
-spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-file-size=1000MB
 # \u5355\u6B21\u6700\u5927\u8BF7\u6C42\u5927\u5C0F
-spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.max-request-size=1000MB
 
 # \u81EA\u5B9A\u4E49\u7684\u4E0A\u4F20\u6587\u4EF6\u5B58\u653E\u8DEF\u5F84
 file.upload.dir=E:/University/GHLearning/uploadSave
