--- a/code-resolver-parse-server/src/main/resources/application.properties
+++ b/code-resolver-parse-server/src/main/resources/application.properties
@@ -2,8 +2,11 @@ server.port=8083
 dubbo.application.name=joernParse
 dubbo.registry.protocol=zookeeper
 dubbo.registry.address=127.0.0.1:2181
+dubbo.provider.prefer-serialization=fastjson2,hessian2
+dubbo.consumer.timeout=6000
 dubbo.protocol.name=dubbo
 dubbo.protocol.port=-1
+dubbo.protocol.payload=2010241024
 dubbo.application.qos-accept-foreign-ip=true
 dubbo.application.qos-port=22225
 #joern安装路径
