--- a/frontend/vite-element/package.json
+++ b/frontend/vite-element/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "echarts": "^5.5.1",
     "element-plus": "^2.7.7",
