--- a/code-resolver-parse-server/src/main/resources/application.properties
+++ b/code-resolver-parse-server/src/main/resources/application.properties
@@ -17,3 +17,5 @@ node_csv=D:\\neo4jdesktopapp\\relate-data\\dbmss\\dbms-f8e55259-b825-4bcf-98a1-2
 edge_csv=D:\\neo4jdesktopapp\\relate-data\\dbmss\\dbms-f8e55259-b825-4bcf-98a1-2b6c330c480a\\import\\edges_*_cypher.csv
 #存放cpg.bin的路径
 cpg.dir=D:/test/cpg.bin
+upload.dir=E:/University/GHLearning/uploadSave/
+database=test
