--- a/code-resolver-joern-server/src/main/resources/application.yml
+++ b/code-resolver-joern-server/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   port: 8081
 dubbo:
   application:
+    logger: slf4j
     name: joern-service-provider
     qos-accept-foreign-ip: true
     qos-port: 22223
