--- a/code-resolver-parse-server/src/main/resources/application.properties
+++ b/code-resolver-parse-server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=8083
 dubbo.application.name=joernParse
+dubbo.application.logger: slf4j
 dubbo.registry.protocol=zookeeper
 dubbo.registry.address=127.0.0.1:2181
 dubbo.provider.prefer-serialization=fastjson2,hessian2
