--- a/code-resolver-upload-server/src/main/resources/application.properties
+++ b/code-resolver-upload-server/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8082
+code-resolver-parse-server
 dubbo.application.name=upload
+dubbo.application.logger: slf4j
 dubbo.registry.protocol=zookeeper
 dubbo.registry.address=127.0.0.1:2181
 dubbo.protocol.name=dubbo
