--- a/code-resolver-consumer/pom.xml
+++ b/code-resolver-consumer/pom.xml
@@ -108,6 +108,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+        </dependency>
     </dependencies>
 
 
