--- a/code-resolver-parser-server/pom.xml
+++ b/code-resolver-parser-server/pom.xml
@@ -88,6 +88,10 @@
             <artifactId>backport-util-concurrent</artifactId>
             <version>3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
