异步执行解析，多线程导入csv文件

--- a/code-resolver-parser-server/src/main/resources/log4j.properties
+++ b/code-resolver-parser-server/src/main/resources/log4j.properties
@@ -1,21 +1,16 @@
-### ??###
-log4j.rootLogger = debug,stdout,D,E
-### ???????? ###
-log4j.appender.stdout = org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target = System.out
-log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
-### ??DEBUG ????????=D://logs/error.log ###
-log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = E:/University/GHLearning/project/log/log.log
-log4j.appender.D.Append = true
-log4j.appender.D.Threshold = DEBUG
-log4j.appender.D.layout = org.apache.log4j.PatternLayout
-log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
-### ??ERROR ????????=E://logs/error.log ###
-log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File =E:/University/GHLearning/project/log/error.log
-log4j.appender.E.Append = true
-log4j.appender.E.Threshold = ERROR
-log4j.appender.E.layout = org.apache.log4j.PatternLayout
-log4j.appender.E.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
+log4j.rootLogger=DEBUG,stdout,file
+log4j.additivity.org.apache=true
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.threshold=INFO
+log4j.appender.stdout.ImmediateFlush=true
+log4j.appender.stdout.Target=system.out
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=[%d] [%-5p] [%t] (%-l) - %m%n
+
+log4j.appender.file=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.append=true
+log4j.appender.file.Threshold=INFO
+log4j.appender.file.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.file.File=D:/tools/workspaces/logs/test.log
+log4j.appender.file.layout.ConversionPattern=[%d]  %-5p [%t]  (%-C{5}:%L) - %m%n
