--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ code-resolver-netty/
 *.iws
 *.iml
 *.ipr
+uploadSave2/
 
 ### Eclipse ###
 .apt_generated
@@ -34,3 +35,4 @@ build/
 
 ### Mac OS ###
 .DS_Store
+/logs/
