--- a/code-resolver-file-server/src/main/resources/log4j.properties
+++ b/code-resolver-file-server/src/main/resources/log4j.properties
@@ -3,18 +3,19 @@ log4j.rootLogger = debug,stdout,D,E
 ### ???????? ###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
+log4j.appender.stdout.Threshold = info
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern = [%-5p] %d{yyyy-MM-dd HH:mm:ss,SSS} method:%l%n%m%n
+log4j.appender.stdout.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss.SSS} [%p] [%t] [%l] : %m %n
 ### ??DEBUG ????????=D://logs/error.log ###
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = E:/University/GHLearning/project/log/log.log
+log4j.appender.D.File = D:/demo/nonacos/code-resolver/logs/file-service.debug.log
 log4j.appender.D.Append = true
 log4j.appender.D.Threshold = DEBUG
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
-log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m%n
+log4j.appender.D.layout.ConversionPattern = %-d{yyyy-MM-dd HH:mm:ss} [ %t:%r ] - [ %p ] %m %n
 ### ??ERROR ????????=E://logs/error.log ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File =E:/University/GHLearning/project/log/error.log
+log4j.appender.E.File =D:/demo/nonacos/code-resolver/logs/file-service.error.log
 log4j.appender.E.Append = true
 log4j.appender.E.Threshold = ERROR
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
