新增git微服务模块，用于获取两次提交记录间的行变动信息

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>code-resolver-consumer</module>
         <module>code-resolver-parser-server</module>
         <module>code-resolver-file-server</module>
+        <module>code-resolver-gitOperation-server</module>
     </modules>
 
     <properties>
