修改了url，数据库表字段，初始化，过滤等操作

--- a/code-resolver-gitOperation-server/src/main/resources/bootstrap.yml
+++ b/code-resolver-gitOperation-server/src/main/resources/bootstrap.yml
@@ -10,7 +10,7 @@ spring:
       config:
         server-addr: 127.0.0.1:8848
         file-extension: yml
-        namespace: 1111
+        namespace: 064b4506-4fec-4e97-b5d9-45a60d7771bf
 dubbo:
   application:
     qos-enable: false
